# ChainClashArena

./: .gitignore  .replit  CHANGELOG.md  Cargo.toml  DEPLOYMENT.md  IMPLEMENTATION_NOTES.md  PROJECT_STATUS.md  QUICK_START_DEPLOY.md  README.md  netlify.toml  readmore.md  replit.md
.github/workflows/: ci.yml
attached_assets/: Pasted-Chain-Clash-PRD-High-level-Goal-a-turn-command-based-PvP-strategy-arena-where-every-player-has-1761505597389_1761505597392.txt
backend/game_contract/: Cargo.toml
backend/game_contract/src/: lib.rs
backend/game_service/: Cargo.toml
backend/game_service/src/: lib.rs
backend_proxy/: README.md  package.json  server.js
frontend/: .env.example  index.html  package.json
frontend/src/: App.tsx
frontend/src/components/: Controls.tsx  GameBoard.tsx  PlayerInfo.tsx
npc_agent/: README.md  agent.js  package.json
tests/: integration_tests.rs
tools/: deploy_scripts.sh  local_setup.sh
