[package]
name = "game_service"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = "7.0"
linera-sdk = "0.15.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = "z"
strip = true
